# odoomap

./: .gitignore  README.md  odoomap.py  pyproject.toml  requirements.txt
odoomap/: __main__.py  actions.py  brute_display.py  colors.py  connect.py  core.py  plugin_manager.py
odoomap/data/: default_usernames.txt
odoomap/plugins/: cve-scanner.py  old-odoo-privesc.py  plugin_base.py
odoomap/utils/: brute_display.py
src/: actions.py  connect.py  core.py  plugin_loader.py  plugin_manager.py  utils.py
src/plugins/: __init__.py  cve-scanner.py  cves.py  old_odoo_privesc.py
