[project]
name = "odoomap"
description = "Odoo Security Assessment Tool"
authors = [{ name = "Mohamed Karrab" }]
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "requests>=2.25,<3",
    "beautifulsoup4>=4.9,<5"
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.scripts]
odoomap = "odoomap.core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Can be replaced with hatch-vcs
path = "odoomap/__init__.py"
