[project]
name = "odoomap"
dynamic = ["version"]
description = "Odoo Security Assessment Tool"
authors = [{ name = "Mohamed Karrab" }]
license = { text = "Apache-2.0" }
readme = "README.md"
dependencies = [
    "requests>=2.25,<3",
    "beautifulsoup4>=4.9,<5",
    "colorama>=0.4.0",
    "rich>=14.0.0"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odoomap"]

[tool.hatch.build]
include = [
    "odoomap/data/*",
    "odoomap/plugins/*"
]

[project.scripts]
odoomap = "odoomap.core:main"

[tool.hatch.version]
path = "odoomap/__init__.py"